--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
-url: https://vszhub.github.io
-avatar: /avatar.jpeg
+title: Hyungseok Ryu
+description: Graduate student at GIST ME School 
+url: https://hyungseokR.github.io
+avatar: /spring.jpg
 paginate: 5
 permalink: pretty
 cover_image: /bg.jpeg
@@ -33,10 +33,10 @@ twitter:
   card: summary
 logo: logo.png
 social:
-  name: Songzi Vong
+  name: Hyungseok Ryu
   links:
     - https://twitter.com/vszhub
-    - https://github.com/vszhub
+    - https://github.com/hyungseokR
 google_site_verification: xxxxx
 lang: en
 
@@ -54,6 +54,6 @@ sass:
 
 # Specify the author for blog posts
 author:
-  name: Songzi Vong
-  url: https://github.com/vszhub/
-  email: vszhub@gmail.com
+  name: Hyungseok Ryu
+  url: https://github.com/hyungseokR
+  email: guswls1287a@gmail.com
