--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,9 +1,9 @@
 - title: Email
-  url: mailto://vszhub@gmail.com
+  url: mailto://guswls1287a@gmail.com
   icon: fas fa-envelope
 - title: Twitter
-  url: https://twitter.com/vszhub
-  icon: fab fa-twitter
+  url: https://instagram.com/r.hs_v/
+  icon: fab fa-instagram
 - title: GitHub
-  url: https://github.com/vszhub/not-pure-poole
+  url: https://github.com/hyungseokR
   icon: fab fa-github
